--- a/css/test.css
+++ b/css/test.css
@@ -1,6 +1,6 @@
 body, html {
-  background: black;
-}
+/*  background: black;
+*/}
 
 :root {
   --font-family: helvetica, arial, sans-serif;
@@ -1379,11 +1379,6 @@ a.link-bar--selected {
   background-image: url(../img/placeholder-text.svg);
   background-size: 100% 176px; }
 
-/* Dragging -- not used currently */
-#draggable {
-  position: absolute; /* study this */
-}
-
 /* Resizing */
 
 .resizable {
@@ -1394,8 +1389,8 @@ a.link-bar--selected {
 .resizable .resizers{
   width: 100%;
   height: 100%;
-  border: 3px solid #4286f4;
-  box-sizing: border-box;
+/*  border: 3px solid #4286f4;
+*/  box-sizing: border-box;
 }
 
 .resizable .resizers .resizer{
@@ -1453,7 +1448,26 @@ a.link-bar--selected {
   cursor: ns-resize;
 }
 
+/* For Event Delegation */
+
 .canvas {
   width: 4000px;
   height: 4000px;
+}
+
+/* Drag Select */
+* { user-select: none; }
+.item {
+  position: absolute; /*redundant?*/
+}
+
+.item:focus { /* Not sure what this does */
+  border: 1px solid blue;
+}
+
+.ds-selected {
+  outline: 3px solid blue;
+  outline-offset: 3px;
+  color: black;
+  font-weight: bold;
 }
