--- a/css/test.css
+++ b/css/test.css
@@ -1389,8 +1389,8 @@ a.link-bar--selected {
 .resizable .resizers{
   width: 100%;
   height: 100%;
-/*  border: 3px solid #4286f4;
-*/  box-sizing: border-box;
+  border: 3px solid #4286f4; /* need to turn of ds border. Enhance this by turning off on firstChild element and turning on for group. */
+  box-sizing: border-box;
 }
 
 .resizable .resizers .resizer{
