multi drag test

--- a/css/interact.css
+++ b/css/interact.css
@@ -1,6 +1,6 @@
 body, html {
-/*  background: black;
-*/}
+  background: black;
+}
 
 :root {
   --font-family: helvetica, arial, sans-serif;
@@ -1481,11 +1481,6 @@ a.link-bar--selected {
 
 .item {
   position: absolute; /*redundant?*/
-
-  &[selected] { /* this triggers on resizers div for some reason*/
-  border-color: white;
-  background: green;
-  }
 }
 
 .item:focus { /* Not sure what this does */
