--- a/css/interact.css
+++ b/css/interact.css
@@ -1,6 +1,6 @@
 body, html {
-/*  background: black;
-*/}
+  background: black;
+}
 
 :root {
   --font-family: helvetica, arial, sans-serif;
@@ -1482,10 +1482,7 @@ a.link-bar--selected {
 .item {
   position: absolute; /*redundant?*/
 
-  &[selected] { /* this triggers on resizers div for some reason*/
-  border-color: white;
-  background: green;
-  }
+
 }
 
 .item:focus { /* Not sure what this does */
@@ -1497,4 +1494,8 @@ a.link-bar--selected {
 .ds-selected {
   outline: 3px solid blue;
   outline-offset: 3px;
+  }
 }
+[selected] { /* this triggers on resizers div for some reason*/
+  border-color: white;
+  background: green;
