--- a/css/interact.css
+++ b/css/interact.css
@@ -1481,8 +1481,10 @@ a.link-bar--selected {
 
 .item {
   position: absolute; /*redundant?*/
-
-
+  &[selected] { /* this triggers on resizers div for some reason*/
+    border-color: white;
+    background: green;
+  }
 }
 
 .item:focus { /* Not sure what this does */
@@ -1496,6 +1498,3 @@ a.link-bar--selected {
   outline-offset: 3px;
   }
 }
-[selected] { /* this triggers on resizers div for some reason*/
-  border-color: white;
-  background: green;
